@@ -2,7 +2,6 @@ package de.jos.freepaper.service.pages;
 
 import de.jos.freepaper.service.SupportedPage;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Forbes extends SupportedPage {
@@ -23,23 +22,34 @@ public class Forbes extends SupportedPage {
     }
 
     @Override
+    public boolean removeEmptyTags() {
+        return true;
+    }
+
+    @Override
+    public boolean removeAllLinks() {
+        return true;
+    }
+
+    @Override
     public List<String> getRemovableElements() {
-        return Arrays.asList( //
+        final List<String> removableElements = super.getRemovableElements();
+        removableElements.addAll(List.of( //
                 "link[rel*='']", //
-                "style", //
-                "svg", //
-                "script", //
                 "header", //
-                "noscript", //
+                "#article-ai-audio", //
                 "fbs-cordial", //
                 "fbs-carousel", //
                 "fbs-ad", //
+                ".socialShareContainer", //
+                ".recirc-module", //
                 ".bottom-contrib-block", //
                 ".elderly-label", //
                 ".article-footer", //
                 ".article-body-image", //
                 ".article-sharing" //
-        );
+        ));
+        return removableElements;
     }
 
 }
